# ai-screening

./: .env.example  .gitignore  README.md  env_run.py  examples.py  pyproject.toml  run_api.py  run_merged_app.py  sdn_matcher.py  test_scores.py  verify_scores.py  verify_scores_llm.py
flask_ui/: .env.example  README.md  pyproject.toml  run.py
flask_ui/app/: app.py
flask_ui/static/css/: style.css
flask_ui/static/js/: main.js
flask_ui/templates/: base.html  index.html
sdn_api/: config.py
sdn_api/api/: main.py
sdn_api/core/: data_loader.py  llm_service.py  name_matcher.py  ranker.py  search_service.py
sdn_api/models/: sdn.py
sdn_api/utils/: logger.py
